DECAF-178 update license from MIT to Mozilla Public License 2.0 with AGPL-3.0 trigger details

--- a/package.json
+++ b/package.json
@@ -60,25 +60,16 @@
     "dist"
   ],
   "keywords": [
-    "plantuml",
-    "mermaid",
-    "uml",
-    "drawio",
-    "mddocs",
-    "md",
-    "jsdoc",
-    "doc",
-    "docs",
-    "documentation",
-    "test",
-    "reports",
-    "confluence",
-    "ci/cd",
-    "ci",
-    "cd",
+    "web",
+    "frontend",
     "template",
     "typescript",
-    "ts"
+    "decaf",
+    "docs",
+    "site",
+    "static",
+    "ssg",
+    "ui"
   ],
   "author": "Tiago Venceslau",
   "license": "MIT",
