DECAF-178 cleaner build system, first bundle release. now exports bundle size

--- a/package.json
+++ b/package.json
@@ -78,31 +78,6 @@
   },
   "homepage": "https://github.com/decaf-ts/ts-workspace#readme",
   "devDependencies": {
-    "@decaf-ts/utils": "latest",
-    "@eslint/js": "^9.25.1",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "@types/jest": "^29.5.14",
-    "clean-publish": "^5.1.0",
-    "dpdm": "^3.14.0",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "jest": "^29.7.0",
-    "jest-html-reporters": "^3.1.7",
-    "jest-junit": "^16.0.0",
-    "jsdoc": "^4.0.4",
-    "jsdoc-mermaid": "^1.0.0",
-    "markdown-include": "^0.4.3",
-    "minimist": "^1.2.8",
-    "nodemon": "^3.1.9",
-    "npm-check-updates": "^18.0.0",
-    "prettier": "3.5.3",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.3.2",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0"
+    "@decaf-ts/utils": "latest"
   }
 }
